<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/frame_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framelayout_test" />

    <Button
        android:id="@+id/relative_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_test" />

    <Button
        android:id="@+id/linear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_test" />

    <Button
        android:id="@+id/myview_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myview" />

    <Button
        android:id="@+id/animate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animate" />

    <Button
        android:id="@+id/listview_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listview" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/content_background"
        android:minHeight="100dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fdsafsdfsdf"
        android:textSize="16sp"
        android:gravity="center" />


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />


</LinearLayout>
